# rust-fmt-extra

./: .travis.yml  Cargo.toml  README.md  main.rs
ci/: docs_github_id.enc  travis-doc-upload.cfg
src/: lib.rs
