[package]
name = "fmt-extra"
version = "0.1.1"
description = "Extra formaters not shipped in the standard library"
license = "Apache-2.0 OR MIT"
authors = ["Cody P Schafer <dev@codyps.com>"]
repository = "https://github.com/jmesmon/rust-fmt-extra.git"
documentation = "http://codyps.com/docs/fmt-extra/x86_64-unknown-linux-gnu/stable/fmt_extra/index.html"
readme = "README.md"
include = ["Cargo.toml", "src/*.rs"]
